--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jhonatan de Souza</title>
+    <title>João Afonso</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -99,7 +99,7 @@
                     <a href="projetos.html" class="nav-link" style=color:white> Projetos</a>
                 </li>
                 <li>
-                    <a href="#sobre-mim" class="nav-link" style=color:white>Sobre mim</a>
+                    <a href="publicacoes.html" class="nav-link" style=color:white>Publicações</a>
                 </li>
                 <li>
                     <a href="#depoimentos" class="nav-link" style=color:white>Depoimentos</a>
