--- a/publicacoes.html
+++ b/publicacoes.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -93,14 +92,14 @@
 
             </ul>
             <ul class="navbar-nav">
-              <li>
-                <a href="index.html" class="nav-link" style=color:white> Home</a>
-            </li>
+                <li>
+                    <a href="index.html" class="nav-link" style=color:white> Home</a>
+                </li>
                 <li>
                     <a href="projetos.html" class="nav-link" style=color:white> Projetos</a>
                 </li>
                 <li>
-                    <a href="publicacoes.html" class="nav-link" style=color:white>Publicações</a>
+                    <a href="#sobre-mim" class="nav-link" style=color:white>Publicações</a>
                 </li>
                 <li>
                     <a href="#depoimentos" class="nav-link" style=color:white>Depoimentos</a>
@@ -111,42 +110,66 @@
             </ul>
         </div>
     </nav>
-  <!-- Não mudar nada acima, apenas as referencias do nav bar -->
 
-    <section class="jumbotron text-center corPrimaria">
-        <div class="container">
-            <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
-            <h1 class="jumbotron-heading" style="color:white;text-transform: uppercase;">João Afonso</h1>
-            <p class="lead" style="color:white !important;">Professor de informática
-            </p>
-            <p>
-                <a href="#contato" class="btn btn-dark my-2">Contato</a>
-            </p>
-            <a href="#"><i style="color:white" class="fab fa-github"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-linkedin"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-instagram"></i></a>
+<!-- Projetos-->
+<div class="album py-5 bg-light " id="projetos">
+    <div class="container">
+        <h2 class="text-center jumbotron-heading titulosVerdes">Projetos</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                    <img class="card-img-top"
+                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]" src="/images/project1.jpg" data-holder-rendered="true"
+                        style="height: 225px; width: 100%;max-width: 100%; display: block;">
+                    <div class="card-body">
+                        <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                        </p>
+                        <ul>
+                            <li>C#</li>
+                            <li>Javascript</li>
+                            <li>Python</li>
+                        </ul>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Ver Projeto</button>
+                                <button type="button" class="btn btn-sm btn-outline-primary">Ver Código</button>
+                            </div>
+                            <small class="text-muted">Projeto Web</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4 box-shadow">
+                    <img class="card-img-top"
+                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]" src="/images/project2.jpg" data-holder-rendered="true"
+                        style="height: 225px; width: 100%; display: block;">
+                    <div class="card-body">
+                        <p class="card-text">Esse é um projeto que eu desenvolvi usando as tecnologias A, B, C e D.
+                        </p>
+                        <ul>
+                            <li>C#</li>
+                            <li>Javascript</li>
+                            <li>C#</li>
+                            <li>Python</li>
+                            <li>Javascript</li>
+                            <li>Python</li>
+                        </ul>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-success">Ver Projeto</button>
+                                <button type="button" class="btn btn-sm btn-outline-primary">Ver Código</button>
+                            </div>
+                            <small class="text-muted">Projeto Mobile</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
-    <!-- Projects -->
-    <div class="album py-5 bg-light " id="projetos">
-      <div class="container">
-
-    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
-        <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <p class="lead paragrafoBrancos">Olá meu nome é John e estou no mercado de games a mais de 4 anos, tendo
-                desenvolvido projetos com empresas como Sony, Unreal Engine, Cry Engine entre diversas outras. Sou
-                apaixado por games games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
-                com meus colegas de trabalho</p>
-        </div>
-    </section>
-  </div>
+    </div>
 </div>
-
-    <footer class="text-center" style="background-color:#2c3e50;padding:0px; margin:0px">
-        <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Copyright 2021 - João Paulo - Thiago - Diogo.
-        </p>
-    </footer>
 
 </body>
 
