--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light" style="background-color:#2c3e50">
-        <a class="navbar-brand" href="#" style=color:white>João Afonso</a>
+      <a class="navbar-brand" href="#" style=color:white>
+        <img src="img/PERFIL.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        João Afonso
+      </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -114,6 +117,7 @@
   <!-- Não mudar nada acima, apenas as referencias do nav bar -->
 
     <section class="jumbotron text-center corPrimaria">
+      
         <div class="container">
             <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
             <h1 class="jumbotron-heading" style="color:white;text-transform: uppercase;">João Afonso</h1>
@@ -131,10 +135,10 @@
     <div class="album py-5 bg-light " id="projetos">
       <div class="container">
 
-    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+    <section class="jumbotron text-center" id="sobre-mim">
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <p class="lead paragrafoBrancos">Olá meu nome é John e estou no mercado de games a mais de 4 anos, tendo
+            <p class="lead paragrafoBrancos ">Olá meu nome é John e estou no mercado de games a mais de 4 anos, tendo
                 desenvolvido projetos com empresas como Sony, Unreal Engine, Cry Engine entre diversas outras. Sou
                 apaixado por games games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
                 com meus colegas de trabalho</p>
