--- a/index.html
+++ b/index.html
@@ -7,138 +7,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>João Afonso</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-        </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-        </script>
-
-    <script src="https://kit.fontawesome.com/f0e17cbf2f.js" crossorigin="anonymous"></script>
-    <style>
-        p {
-            font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        }
-
-        .foto-perfil {
-            height: 100%;
-            max-width: auto;
-            border-radius: 50%;
-        }
-
-        .icones {
-            padding-left: 5px;
-        }
-
-        .titulosBrancos {
-            text-decoration: underline;
-            text-underline-position: under;
-            padding-bottom: 20px;
-            text-transform: uppercase;
-            font-weight: 700;
-            color: white;
-        }
-
-        .titulosVerdes {
-            text-decoration: underline;
-            text-underline-position: under;
-            padding-bottom: 20px;
-            text-transform: uppercase;
-            font-weight: 700;
-            color: #18bc9c
-        }
-
-        .paragrafoBrancos {
-            color: white !important;
-        }
-
-
-        .jumbotron {
-            margin-bottom: 0px;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        p {
-            color: black !important;
-        }
-
-        .corPrimaria {
-            background-color: #18bc9c;
-        }
-
-        .itemMenu {
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-    <nav class="navbar navbar-expand-md navbar-light" style="background-color:#2c3e50">
-      <a class="navbar-brand" href="#" style=color:white>
-        <img src="img/PERFIL.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        João Afonso
-      </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav mr-auto">
-
-            </ul>
-            <ul class="navbar-nav">
-              <li>
-                <a href="index.html" class="nav-link" style=color:white> Home</a>
-            </li>
-                <li>
-                    <a href="projetos.html" class="nav-link" style=color:white> Projetos</a>
-                </li>
-                <li>
-                    <a href="publicacoes.html" class="nav-link" style=color:white>Publicações</a>
-                </li>
-                <li>
-                    <a href="#depoimentos" class="nav-link" style=color:white>Depoimentos</a>
-                </li>
-                <li>
-                    <a href="#contato" class="nav-link" style=color:white>Contato</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-  <!-- Não mudar nada acima, apenas as referencias do nav bar -->
-
-    <section class="jumbotron text-center corPrimaria">
+    
+    <!-- Barra de navegação -->
+    <ul class="nav justify-content-center ">
+        <li class="nav-item  ">
+          <a class="nav-link active text-dark" href="index.html">Home</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link text-dark" href="projetos.html">Projetos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark" href="publicacoes.html">Publicações</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" href="publicacoes.html">Depoimentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" href="publicacoes.html">Contato</a>
+          </li>
+      </ul>
+      <br>
       
-        <div class="container">
-            <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
-            <h1 class="jumbotron-heading" style="color:white;text-transform: uppercase;">João Afonso</h1>
-            <p class="lead" style="color:white !important;">Professor de informática
-            </p>
-            <p>
-                <a href="#contato" class="btn btn-dark my-2">Contato</a>
-            </p>
-            <a href="#"><i style="color:white" class="fab fa-github"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-linkedin"></i></a>
-            <a href="#"><i style="color:white" class="fab fa-instagram"></i></a>
-        </div>
-    </section>
-    <!-- Projects -->
-    <div class="album py-5 bg-light " id="projetos">
-      <div class="container">
+     <!--<img src="img/PERFIL.png" class="fixed-top" alt="Responsive image"> -->
+  <!-- Não mudar nada acima, apenas as referencias do nav bar -->
+  <div class="container">
+    <div class="row">
+      <div class="col">
+           <!-- Coluna 1 -->
+        <section class="jumbotron bg-dark text-center" style="width: 50%;" >
+                <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
+                <h1 class="jumbotron-heading" style="color:white;text-transform: uppercase;">João Afonso</h1>
+                <p class="lead" style="color:white !important;">Professor de informática
+                </p>
+                <p>
+                    <a href="#sobre-mim" class="btn btn-light my-2">Sobre mim</a>
+                </p>
+                <a href="#"><i style="color:white" class="fab fa-github"></i></a>
+                <a href="#"><i style="color:white" class="fab fa-linkedin"></i></a>
+                <a href="#"><i style="color:white" class="fab fa-instagram"></i></a>
+        </section>
+      </div>
+      <div class="col">
+    <!-- Coluna 2 -->
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide " data-ride="carousel" style="width: 170%;  position: relative; left: -280px;
+            " >
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/a.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block ">
+                      <h5>Computação avança</h5>
+                      <p class="text-light">A computação virou alvo de críticas</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/a.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Novo Java?</h5>
+                      <p class="text-light">Os criadores de Java, anunciam o JavaSrap</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/a.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Marte alerta</h5>
+                      <p class="text-light">A falta de mão de obra, faz o planeta vermelho recorrer a Terra. Estão em busca de novos programadores.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </section>
+      </div>
+    </div>
 
-    <section class="jumbotron text-center" id="sobre-mim">
+
+    <!-- Sobre mim -->
+
+    <section class="text-center bg-light" id="sobre-mim">
         <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <p class="lead paragrafoBrancos ">Olá meu nome é John e estou no mercado de games a mais de 4 anos, tendo
+            <h2 class="jumbotron-heading text-dark">Sobre mim</h2>
+            <p class="lead text-dark ">Olá meu nome é John e estou no mercado de games a mais de 4 anos, tendo
                 desenvolvido projetos com empresas como Sony, Unreal Engine, Cry Engine entre diversas outras. Sou
                 apaixado por games games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
                 com meus colegas de trabalho</p>
@@ -146,12 +116,13 @@
     </section>
   </div>
 </div>
+    <!-- Footer -->
 
-    <footer class="text-center" style="background-color:#2c3e50;padding:0px; margin:0px">
-        <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Copyright 2021 - João Paulo - Thiago - Diogo.
-        </p>
-    </footer>
-
+<footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50 ">
+    <div class="container text-center">
+      <small>Copyright &copy; João Paulo Patrão & Thiago Mafra & Diogo Guimarães</small>
+    </div>
+  </footer>
 </body>
 
 </html>
