--- a/orientacao.html
+++ b/orientacao.html
@@ -53,7 +53,11 @@
     
     <main role="main">
 
-<!-- Colocar aqui o código -->
+      <div class="container">
+        <h1 class="mt-5">Sticky footer com navbar fixa</h1>
+        <p class="lead">Fixe um footer na parte inferior da viewport, em navegadores desktop, com estes HTML e CSS customizados. Além do mais, um navbar fixo foi adicionado com <code>padding-top: 60px;</code> e <code>body &gt; .container</code>.</p>
+        <p>Volte para o <a href="../sticky-footer">sticky footer padrão</a> sem a navbar.</p>
+      </div>
 
     </main>
 
