--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
         <p class="float-right">
           <button type="button" class="btn btn-outline-light">
           <a class="text-light" href="#">Voltar ao topo</a>
-        </button>
-
-        </p>
+        </button></p>
+        
         <p>Copyright &copy; João Paulo Patrão & Thiago Mafra & Diogo Guimarães</p>
 
       </div>
