--- a/orientacao.html
+++ b/orientacao.html
@@ -21,7 +21,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand text-light" href="#sobre-mim">João Afonso</a>
+              <!--<a class="navbar-brand text-light" href="#sobre-mim">João Afonso</a>-->
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
                 <li class="nav-item active">
                   <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -58,7 +58,16 @@
         <p class="lead">Fixe um footer na parte inferior da viewport, em navegadores desktop, com estes HTML e CSS customizados. Além do mais, um navbar fixo foi adicionado com <code>padding-top: 60px;</code> e <code>body &gt; .container</code>.</p>
         <p>Volte para o <a href="../sticky-footer">sticky footer padrão</a> sem a navbar.</p>
       </div>
-
+      <div class="container">
+        <h1 class="mt-5">Sticky footer com navbar fixa</h1>
+        <p class="lead">Fixe um footer na parte inferior da viewport, em navegadores desktop, com estes HTML e CSS customizados. Além do mais, um navbar fixo foi adicionado com <code>padding-top: 60px;</code> e <code>body &gt; .container</code>.</p>
+        <p>Volte para o <a href="../sticky-footer">sticky footer padrão</a> sem a navbar.</p>
+      </div>
+      <div class="container">
+        <h1 class="mt-5">Sticky footer com navbar fixa</h1>
+        <p class="lead">Fixe um footer na parte inferior da viewport, em navegadores desktop, com estes HTML e CSS customizados. Além do mais, um navbar fixo foi adicionado com <code>padding-top: 60px;</code> e <code>body &gt; .container</code>.</p>
+        <p>Volte para o <a href="../sticky-footer">sticky footer padrão</a> sem a navbar.</p>
+      </div>
     </main>
 
 <!-- Footer abaixo -->
