--- a/depoimentos.html
+++ b/depoimentos.html
@@ -21,7 +21,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand text-light" href="#sobre-mim">João Afonso</a>
+              <!--<a class="navbar-brand text-light" href="#sobre-mim">João Afonso</a>-->
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
                 <li class="nav-item active">
                   <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
