--- a/publicacoes.html
+++ b/publicacoes.html
@@ -16,6 +16,7 @@
   <body>
 
     <header>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,13 +28,13 @@
                   <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="projetos.html">Projetos</a>
+                  <a class="nav-link text-light" href="publicacoes.html">Publicações</a>              
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="publicacoes.html">Publicações</a>
+                  <a class="nav-link text-light" href="projetos.html">Projetos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="publicacoes.html">Depoimentos</a>
+                    <a class="nav-link text-light" href="disciplina.html">Disciplina</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-light" href="orientacao.html">Orientação</a>
