--- a/publicacoes.html
+++ b/publicacoes.html
@@ -67,9 +67,9 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
         
         <span style="float: left;padding-right: 10px">
@@ -80,10 +80,11 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Musa G. Samaila, João B. F. Sequeiros, Carolina Lopes, Edi Aires, Tiago Simões, Mário M. Freire and <b>Pedro R. M. Inácio</b>, <i>Performance Evaluation of the SRE and SBPG Components of the IoT Hardware Platform Security Advisor Framework,</i> Elsevier Computer Networks (COMNET), 2021. In press.<a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
+
         <span style="float: left;padding-right: 10px">
           <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
@@ -92,10 +93,11 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Musa G. Samaila, João B. F. Sequeiros, Carolina Lopes, Edi Aires, Tiago Simões, Mário M. Freire and <b>Pedro R. M. Inácio</b>, <i>Performance Evaluation of the SRE and SBPG Components of the IoT Hardware Platform Security Advisor Framework,</i> Elsevier Computer Networks (COMNET), 2021. In press.<a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
+
         <span style="float: left;padding-right: 10px">
           <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
@@ -104,10 +106,11 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Musa G. Samaila, João B. F. Sequeiros, Carolina Lopes, Edi Aires, Tiago Simões, Mário M. Freire and <b>Pedro R. M. Inácio</b>, <i>Performance Evaluation of the SRE and SBPG Components of the IoT Hardware Platform Security Advisor Framework,</i> Elsevier Computer Networks (COMNET), 2021. In press.<a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
+
         <span style="float: left;padding-right: 10px">
           <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
@@ -116,10 +119,11 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Musa G. Samaila, João B. F. Sequeiros, Carolina Lopes, Edi Aires, Tiago Simões, Mário M. Freire and <b>Pedro R. M. Inácio</b>, <i>Performance Evaluation of the SRE and SBPG Components of the IoT Hardware Platform Security Advisor Framework,</i> Elsevier Computer Networks (COMNET), 2021. In press.<a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
+
         <span style="float: left;padding-right: 10px">
           <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
@@ -128,9 +132,22 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Musa G. Samaila, João B. F. Sequeiros, Carolina Lopes, Edi Aires, Tiago Simões, Mário M. Freire and <b>Pedro R. M. Inácio</b>, <i>Performance Evaluation of the SRE and SBPG Components of the IoT Hardware Platform Security Advisor Framework,</i> Elsevier Computer Networks (COMNET), 2021. In press.<a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Open access in link.</a><br>
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Institute for Scientific Information (ISI) Impact Factors: 4.474 (2020) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+        </p>
+
+        <span style="float: left;padding-right: 10px">
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+        </span>
+        <span style="float: right;">
+          <br>
+          <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
+        </span>
+        <p class="justify">
+          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+        <small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
     </div>
         
