--- a/publicacoes.html
+++ b/publicacoes.html
@@ -60,7 +60,7 @@
         <br>         
         
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/1.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -73,7 +73,7 @@
         </p>
         
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/2.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -86,7 +86,7 @@
         </p>
 
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/3.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -99,7 +99,7 @@
         </p>
 
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/4.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -112,7 +112,7 @@
         </p>
 
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/5.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -125,7 +125,7 @@
         </p>
 
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/6.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
@@ -138,7 +138,7 @@
         </p>
 
         <span style="float: left;padding-right: 10px">
-          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="https://www.scimagojr.com/journal_img.php?id=26811" alt="SCImago Journal &amp; Country Rank"  /></a>
+          <a href="https://www.scimagojr.com/journalsearch.php?q=26811&amp;tip=sid&amp;exact=no" target="_blank" title="SCImago Journal &amp; Country Rank"><img height="60" border="0" src="gif/7.gif" alt="SCImago Journal &amp; Country Rank"  /></a>
         </span>
         <span style="float: right;">
           <br>
