--- a/publicacoes.html
+++ b/publicacoes.html
@@ -80,7 +80,7 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          Nuno Manuel  e <b>João Afonso</b>, <i>Para uma detecção precisa da apneia do sono com base no sinal de ECG: A quintessência de uma sábia selecção de características,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
           Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
@@ -93,9 +93,9 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          Mário Marques e <b>João Afonso</b>, <i>Internet das Coisas Arquitecturas, Tecnologias, Aplicações, Desafios e Direcções Futuras para Melhores Ambientes de Vida e Sistemas de Cuidados de Saúde,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (1-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -106,9 +106,9 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          Ines Almeida e <b>João Afonso</b>, <i>Keyed User Datagram Protocol: conceitos e funcionamento de um protocolo de transporte quase sem ligações e fiável,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (2-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -119,9 +119,9 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          Miguel Cordeiro e <b>João Afonso</b>, <i>Identificação de movimentos reais e imaginários no EEG utilizando modelos de aprendizagem automática,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (3-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -132,9 +132,9 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          Joaquim Silva e <b>João Afonso</b>, <i>Previsão do Comportamento Humano Embora não invasiva e de Preservação Privada da Internet das Coisas (IoT) Monitorização Assistida,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (4-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -145,7 +145,7 @@
           <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
         </span>
         <p class="justify">
-          Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
+          João Fernandes e <b>João Afonso</b>, <i>Validação de um método para a estimativa do gasto de energia durante a actividade física utilizando um acelerómetro de dispositivo móvel,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://journals.openedition.org/rccs/3732" target="_blank">Acesso pelo link.</a><br>
         <small>
           Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
         </p>
