--- a/publicacoes.html
+++ b/publicacoes.html
@@ -69,7 +69,7 @@
         <p class="justify">
           Joaquim Fernandes e <b>João Afonso</b>, <i>Avaliação de desempenho dos jogos de estratégia Web,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2021) and 3.780 (5-months)</small>
         </p>
         
         <span style="float: left;padding-right: 10px">
@@ -82,7 +82,7 @@
         <p class="justify">
           Nuno Manuel  e <b>João Afonso</b>, <i>Para uma detecção precisa da apneia do sono com base no sinal de ECG: A quintessência de uma sábia selecção de características,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2021) and 3.780 (10-months)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -95,7 +95,7 @@
         <p class="justify">
           Mário Marques e <b>João Afonso</b>, <i>Internet das Coisas Arquitecturas, Tecnologias, Aplicações, Desafios e Direcções Futuras para Melhores Ambientes de Vida e Sistemas de Cuidados de Saúde,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (1-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2020) and 3.780 (1-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -121,7 +121,7 @@
         <p class="justify">
           Miguel Cordeiro e <b>João Afonso</b>, <i>Identificação de movimentos reais e imaginários no EEG utilizando modelos de aprendizagem automática,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (3-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2018) and 3.780 (3-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -134,7 +134,7 @@
         <p class="justify">
           Joaquim Silva e <b>João Afonso</b>, <i>Previsão do Comportamento Humano Embora não invasiva e de Preservação Privada da Internet das Coisas (IoT) Monitorização Assistida,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://www.sciencedirect.com/science/article/pii/S1389128621004370" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (4-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2017) and 3.780 (4-years)</small>
         </p>
 
         <span style="float: left;padding-right: 10px">
@@ -147,7 +147,7 @@
         <p class="justify">
           João Fernandes e <b>João Afonso</b>, <i>Validação de um método para a estimativa do gasto de energia durante a actividade física utilizando um acelerómetro de dispositivo móvel,</i> na Universidade da Beira Interior. <a class="openaccess" href="https://journals.openedition.org/rccs/3732" target="_blank">Acesso pelo link.</a><br>
         <small>
-          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2019) and 3.780 (5-years)</small>
+          Universidade da Beira Interior (UBI) Impact Factors: 4.474 (2016) and 3.780 (5-years)</small>
         </p>
     </div>
         
