--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <div class="container" id="sobre-mim">
             <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
             <h2 class="jumbotron-heading text-dark">Sobre mim</h2>
-            <p class="lead text-dark ">Olá meu nome é João Afonso e estou no mercado de games a mais de 4 anos, tendo
+            <p class="lead text-dark ">Olá meu nome é João Afonso e leciono na Univerdade da Beira Interior a mais de 4 anos, tendo
                 desenvolvido projetos com empresas como Sony, Unreal Engine, Cry Engine entre diversas outras. Sou
-                apaixado por games games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
-                com meus colegas de trabalho</p>
+                apaixado por games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
+                com meus alunos e colegas de trabalho</p>
 
         </div>
       </div>
