--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="img/a.jpg" class="d-block w-100" alt="...">
+                        <img src="img/2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Novo Java?</h5>
                           <p class="text-light">Os criadores de Java, anunciam o JavaSrap</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="img/a.jpg" class="d-block w-100" alt="...">
+                        <img src="img/1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Marte alerta</h5>
                           <p class="text-light">A falta de mão de obra, faz o planeta vermelho recorrer a Terra. Estão em busca de novos programadores.</p>
