--- a/disciplina.html
+++ b/disciplina.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>João Afonso</title>
   </head>
 
@@ -77,30 +78,18 @@
 <br>
 
 <p class="justify">
-<b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
+<b>Jogos em <i>Realidade Virtual</i></b><br /><small>Licenciatura em Informática Web, 2º Semestre, anos letivos compreendidos entre 2016/17.</small>
 </p>
 <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
+  <b>Base de <i>Dados</i></b><br /><small>Licenciatura em Informática Web, 1º Semestre, anos letivos compreendidos entre 2015/16. </small>
   </p>
   
   <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
+  <b>Design <i>Web</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2014/15.</small>
   </p>
   
   <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
-  </p>
-  
-  <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
-  </p>
-  
-  <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
-  </p>
-  
-  <p class="justify">
-  <b>Jogos na <i>Cloud</i></b><br /><small>Mestrado em Informática Web, 1º Semestre, anos letivos compreendidos entre 2018/20 e 2020/21.</small>
+  <b>Programação <i>Mobile</i></b><br /><small>Licenciatura em Informática Web, 1º Semestre, anos letivos compreendidos entre 2013/15.</small>
   </p>
       </div>
 
