--- a/orientacao.html
+++ b/orientacao.html
@@ -137,7 +137,7 @@
             <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
           </span>
           <p class="justify">
-           Manuel Rodriguês e <b>João Afonso</b>, <i> Projeto: Big Data,</i> "Análise e processamento distribuído de redes de grande
+           Rui Rodriguês e <b>João Afonso</b>, <i> Projeto: Jukebox,</i> "Análise e processamento distribuído de redes de grande
            dimensão" na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/big-data" target="_blank">Acesso pelo link.</a><br>
 
           </p>
