orientacao.html finalizada 1.0

--- a/orientacao.html
+++ b/orientacao.html
@@ -77,7 +77,7 @@
           </span>
           <p class="justify">
            Manuel Rodriguês e <b>João Afonso</b>, <i> Projeto: Big Data,</i> "Análise e processamento distribuído de redes de grande
-           dimensão" na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/big-data" target="_blank">Acesso pelo link.</a><br>
+           dimensão", na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/big-data" target="_blank">Acesso pelo link.</a><br>
 
           </p>
 
@@ -97,7 +97,7 @@
             <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
           </span>
           <p class="justify">
-           Thiago Maia e <b>João Afonso</b>, <i> Projeto: One Client,</i> "Comunicação por voz, via Web, com Contact Center." na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/one-client" target="_blank">Acesso pelo link.</a><br>
+           Thiago Maia e <b>João Afonso</b>, <i> Projeto: One Client,</i> "Comunicação por voz, via Web, com Contact Center.", na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/one-client" target="_blank">Acesso pelo link.</a><br>
 
           </p>
 
@@ -117,7 +117,7 @@
             <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
           </span>
           <p class="justify">
-           Antunes Ferreira e <b>João Afonso</b>, <i> Projeto: GitHub Thoth,</i> "Transformar o Thoth numa plataforma extensível." na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/github-thoth" target="_blank">Acesso pelo link.</a><br>
+           Antunes Ferreira e <b>João Afonso</b>, <i> Projeto: GitHub Thoth,</i> "Transformar o Thoth numa plataforma extensível.", na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/github-thoth" target="_blank">Acesso pelo link.</a><br>
 
           </p>
 
@@ -135,7 +135,7 @@
             <a href="https://plu.mx/plum/a/?doi=10.1016/j.comnet.2021.108496" data-size="small" class="plumx-plum-print-popup">  </a>
           </span>
           <p class="justify">
-           Rui Rodriguês e <b>João Afonso</b>, <i> Projeto: Jukebox,</i> "Um sistema que disponibiliza as funcionalidades de uma jukebox." na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/jukebox" target="_blank">Acesso pelo link.</a><br>
+           Rui Rodriguês e <b>João Afonso</b>, <i> Projeto: Jukebox,</i> "Um sistema que disponibiliza as funcionalidades de uma jukebox.", na Universidade da Beira Interior. <a class="openaccess" href="https://www.isel.pt/projetos/jukebox" target="_blank">Acesso pelo link.</a><br>
 
           </p>
       </main>
