--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand text-light" href="#sobre-mim">João Afonso</a>
+        <a class="navbar-brand text-light" href="#sobre-mim">
+          <img src="img/PERFIL.png" width="30" height="30" class="d-inline-block align-top" alt="">     João Afonso</a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
             <li class="nav-item active">
               <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -61,21 +62,27 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
+                        <a href="https://https://www.java.com/pt-BR/" target="_blank">
                         <img src="img/a.jpg" class="d-block w-100" alt="...">
+                      </a>
                         <div class="carousel-caption d-none d-md-block ">
                           <h5>Computação avança</h5>
                           <p class="text-light">A computação virou alvo de críticas</p>
                         </div>
                       </div>
                       <div class="carousel-item">
+                        <a href="https://www.microsoft.com/pt-pt/windows" target="_blank">
                         <img src="img/2.png" class="d-block w-100" alt="...">
+                      </a>
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Novo Java?</h5>
                           <p class="text-light">Os criadores de Java, anunciam o JavaSrap</p>
                         </div>
                       </div>
                       <div class="carousel-item">
+                        <a href="https://www.spacex.com/" target="_blank">
                         <img src="img/1.jpg" class="d-block w-100" alt="...">
+                      </a>
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Marte alerta</h5>
                           <p class="text-light">A falta de mão de obra, faz o planeta vermelho recorrer a Terra. Estão em busca de novos programadores.</p>
