index.html final

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <a href="https://https://www.java.com/pt-BR/" target="_blank">
+                        <a href="https://www.microsoft.com/pt-pt/windows" target="_blank">
                         <img src="img/a.jpg" class="d-block w-100" alt="...">
                       </a>
                         <div class="carousel-caption d-none d-md-block ">
@@ -71,7 +71,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <a href="https://www.microsoft.com/pt-pt/windows" target="_blank">
+                        <a href="https://www.python.org/" target="_blank">
                         <img src="img/2.png" class="d-block w-100" alt="...">
                       </a>
                         <div class="carousel-caption d-none d-md-block">
