--- a/projetos.html
+++ b/projetos.html
@@ -58,7 +58,7 @@
               
                 <div class="album py-5 bg-light">
                   <div class="container">
-                    <h1 class="pt"> Publicações </h1><br>
+                    <h1 class="pt"> Projetos </h1><br>
                     <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
