--- a/projetos.html
+++ b/projetos.html
@@ -66,7 +66,7 @@
                           <div class="card-body"><h5>ALS Glance</h5> 
                             <p class="card-text">Star schema of patient EMG data to speed up analysis. OData Web Api to provide
                               data in agnostic manner.<br>Client application consumes data provided by the Api and shows the
-                              patient resume.</p>
+                              patient resume.<br><br><b>Financiamento : 50.000 euros</b></p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a class="btn btn-secondary" href="https://www.isel.pt/media/uploads/c37359.pdf" role="button">Ver</a>
